--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -89,7 +89,7 @@ Growth & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41
 & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433)\\
 & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546)\\
 & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions\\
-& Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-3 & Light Intensity = 120-140 $\mu$mol*m-2*s-4 & Light Intensity = 120-140 $\mu$mol*m-2*s-5 & Light Intensity = 120-140 $\mu$mol*m-2*s-6 & Light Intensity = 120-140 $\mu$mol*m-2*s-6\\
+& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$\\
 & Light Cycle Day/Night = 16/8 & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night\\
 & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C\\
 & Gravistimulation Prior To Recording = 8h 34min & Gravistimulation Prior To Recording = 14h 20min & Gravistimulation Prior To Recording = 15h 45min & Gravistimulation Prior To Recording = 8h 25min & Gravistimulation Prior To Recording = 7h 15min & Gravistimulation Prior To Recording = 12h 40min\\
@@ -102,7 +102,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433)\\
 & Perfusion Speed = 0.47ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min\\
 & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions\\
-& Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-1 & Light Intensity = 120-140 $\mu$mol*m-2*s-1\\
+& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$\\
 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8\\
 & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C\\
 & & & & & \ & \ \\
@@ -143,8 +143,8 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1\\
 & \ & \ & \ & \ & \ & \ \\
 Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift\\
-& Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z\\
-& 555 x 221 x 147 & 689 x 393 x 200 & 736 x 376 x 170 & 682 x 406 x 130 & 666 x 404 x 130 & 684 x 378 x 110\\
+& Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z\\
+& 555 $\times$ 221 $\times$ 147 & 689 $\times$ 393 $\times$ 200 & 736 $\times$ 376 $\times$ 170 & 682 $\times$ 406 $\times$ 130 & 666 $\times$ 404 $\times$ 130 & 684 $\times$ 378 $\times$ 110\\
 \bottomrule
 \caption[Metadata of light sheet recordings.]{Related to Figure 1. \textbf{Metadata of light sheet recordings.}}
 \label{tab:metadata}
