--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -18,7 +18,7 @@
 \captionof{figure}[]{
 Related to Figure 1.
 {\bf Time lapse recording of lateral root primordia development in five wild type datasets.}
-{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Due to a high dynamic range in grey values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
+{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pUBQ10::YFP-PIP1;4}is shown. Due to a high dynamic range in grey values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
 }
 \label{fig:S1}
 %
@@ -26,13 +26,13 @@ Related to Figure 1.
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S2.pdf}
+	\begin{overpic}[width=0.9\linewidth]{images/S2.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
 Related to Figure 1.
-{\bf Cell lineages of the five wild type datasets and the \emph{aurora} double mutant.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees marked by orange rectangles are the ones located in the master cell file of a dataset. The visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal). The visualisation is done in \textit{scifer}.
+{\bf Cell lineages of the five wild type datasets.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees marked by orange rectangles are the ones located in the master cell file of a dataset. The visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal).
 }
 \label{fig:S2}
 %
@@ -46,7 +46,7 @@ Related to Figure 1.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 2 and Figure 3.
-{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells. The visualisation is done in \textit{scifer}.
+{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells.
 }
 \label{fig:S3}
 %
@@ -80,16 +80,16 @@ Related to Figure 5.
 %
 \clearpage
 %
-\begin{figure}[htbp]
+\begin{sidewaysfigure}
 \centering
-	\begin{overpic}[width=0.8\linewidth]{images/S6.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/S6.pdf}
 	\end{overpic}
-\end{figure}
+\end{sidewaysfigure}
 \clearpage
 \captionof{figure}[]{
 Related to Figure 5.
 {\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant (dataset \#131203).}
-{\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B-G:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{B-D}) The cell divided without building a cell wall. (\textbf{E-G}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{H}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
+{\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B:} Corresponding cell lineages. Colour scheme is identical to the one used in Figure~\ref{fig:S2}. {\bf C-I:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{C-E}) The cell divided without building a cell wall. (\textbf{F-H}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{I}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
 }
 \label{fig:S6}
 %
