Included Alex' comments

--- a/SupplementalExperimentalProcedures.tex
+++ b/SupplementalExperimentalProcedures.tex
@@ -62,11 +62,11 @@ In order to compare all datasets with each other we require a spatial and a temp
 
 \subsubsection{Spatial Registration}
 \noindent
-We compute the centre of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Using this information, each dataset is then initially translated to the origin (black node in Illustration~\ref{fig:spatialRegistration}, top) according to the centre of mass and rotated by its associated principal components (arrows in Illustration~\ref{fig:spatialRegistration}, top). Thus, we obtain a common Cartesian coordinate system resulting in three orthogonal views: \textit{Front} (x-y, growth towards the observer), \textit{side} (x-z, along shoot/root axis), and \textit{radial} view (y-z, transversal cut perpendicular to shoot/root axis). Slight manual refinements were done using affine transformations such that the bases of the primordia are aligned with respect to the convex hulls (see Illustration~\ref{fig:spatialRegistration}, bottom). This fitting represents an optimal basis for comparing different lateral roots developing from almost the same base position.
+We compute the centre of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Using this information, each dataset is then initially translated to the origin (black node in Illustration~\ref{fig:spatialRegistration}, top) according to the centre of mass and rotated by its associated principal components (arrows in Illustration~\ref{fig:spatialRegistration}, top). Thus, we obtain a common Cartesian coordinate system resulting in three orthogonal views: \textit{front} (x-y, growth towards the observer), \textit{side} (x-z, along shoot/root axis), and \textit{radial} view (y-z, transversal cut perpendicular to shoot/root axis). Slight manual refinements were done using affine transformations such that the bases of the primordia are aligned with respect to the convex hulls (see Illustration~\ref{fig:spatialRegistration}, bottom). The spatially registered datasets develop from almost the same base position and can be directly compared.
 
 \subsubsection{Temporal Registration}
 \noindent
-The lapse of time between gravistimulation, the onset of lateral root primordium initiation and imaging differs between the datasets. Therefore, we compensated for the temporal difference between the recordings by synchronizing the datasets on the total number of cells. This approach provides a developmental synchronization and allows to directly compare the datasets. For this purpose, the intersection set of the number of cells among all datasets for the first and last time points are observed. The number of cells are in the range of $[10,176]$ for \#120830, $[15,160]$ for \#121204, $[18,260]$ for \#121211, $[9,143]$ for \#130508 and $[15,267]$ for \#130607. Consequently, the intersection range is $[18, 143]$ and datasets are analysed for identical numbers of cells.
+The lapse of time between gravistimulation, the onset of lateral root primordium initiation and imaging differs between the datasets. Therefore, we compensated for the temporal difference between the recordings by synchronizing the datasets on the total number of cells. This developmental synchronization allows a direct comparison between the datasets. For this purpose, the intersection set of the number of cells among all datasets for the first and last time points are observed. The number of cells are in the range of $[10,176]$ for \#120830, $[15,160]$ for \#121204, $[18,260]$ for \#121211, $[9,143]$ for \#130508 and $[15,267]$ for \#130607. Consequently, the intersection range is $[18, 143]$ and datasets are analysed for identical numbers of cells.
 
 \clearpage
 \section{Quantitative Analysis of the Datasets}
@@ -75,7 +75,7 @@ To estimate cellular growth rate and doubling time of each dataset, we performed
 \begin{equation}
 N(t)=N_0e^{kt},
 \end{equation}
-where $N(t)$ is the number of cells at time point $t$, $N_0$ the number of cells at $t=0$ and $k$ the growth rate. This rate was determined by a \textit{Least Squares Fitting} while the doubling time $T$ is computed as $T=\frac{ln(2)}{k}$.
+where $N(t)$ is the number of cells at time point $t$, $N_0$ the number of cells at $t=0$ and $k$ the growth rate. This rate was determined by a \textit{least squares fitting} while the doubling time $T$ was computed as $T=\nicefrac{ln(2)}{k}$.
 
 %\subsection{Geometric Measurements}
 %We computed the height, width, length and volume of the VLR using \textit{Mathematica}:
@@ -95,7 +95,7 @@ For all datasets we capture relevant properties for daughter cells of a division
 \textbf{Time point} &
 Time point of division event.\\
 \textbf{Division round} &
-Number of the current division round since the first division of the underlying cell lineage.\\
+Number of the current division round (cycle) since the first division of the underlying cell lineage.\\
 \textbf{Interphase duration}&
 Number of time points between two consecutive division events.\\
 \textbf{Direction of previous division} &
@@ -325,9 +325,9 @@ D_a = \frac{1}{n} \sum_{n} d_a, \qquad M_a = \frac{1}{n} \sum_{n} m_a.
 As a result, each tile shows an averaged deformation represented by a line with normalized length. The averaged magnitudes are illustrated by a colour map and additional ``bow ties'' illustrate the variance of the deformation orientation (see Illustration~\ref{fig:gridDeformation}, right). We perform this averaging for all three views (front, side, radial). Figure 2B in the main text shows the deformation result for the first, mid and last time point ranges. For the front and radial view, we illustrate the deformation for all cells while for the side view we focus only on the cell changes located in the master cell file. Note that we determine in all cases the deformation information based on all 3D+t cell data. The magnitudes with unit $\boldsymbol{\nicefrac{\mu m}{min}}$ are in the range of $[0.0032, 0.1995]$ (front), $[0.0016, 0.1259]$ (side), and $[0.0016, 0.0501]$ (radial). We have chosen $S=20$ steps for which $\Delta t = 6.25$ with an average increase rate of $12.06$ cells per step. The deformation computation as well as the visualisation are realized in \textit{MATLAB}.
 
 \clearpage
-\section{Modelling of a Lateral Root Primordium Formation}
+\section{Modelling the Formation of a Lateral Root Primordium}
 \noindent
-We use a non-mechanical 2D vertex-based model for lateral root development. The evolving 2D tissue of the model is described by a graph, i.e.~an abstract structure in which a set of vertices is connected by a set of edges. In this context, an edge denotes a cell wall and a vertex corresponds to a junction that forms the point of contact between at least two cell walls~\citeMM{prusinkiewicz_lindenmayer_1990}{prusinkiewicz_runions_2012}. As a consequence, the complete topology of all cells in the model (such as neighbourhood information) can be accessed via a graph rotation system~\cite{edmonds_1960}. We realize the implementation of the 2D model using \textit{OpenGL} (\href{https://www.opengl.org/}{https://www.opengl.org/}) and the \textit{VV} (Vertex-Vertex) programming language~\citeMM{smith_et_al_2004}{smith_2006} which is embedded in a C{}\verb!++! programming environment.
+We use a non-mechanical 2D vertex-based model for lateral root development. The evolving 2D model is described by a graph, i.e.~an abstract structure in which a set of vertices is connected by a set of edges. In this context, an edge denotes a cell wall and a vertex corresponds to a junction that forms the point of contact between at least two cell walls~\citeMM{prusinkiewicz_lindenmayer_1990}{prusinkiewicz_runions_2012}. As a consequence, the complete topology of all cells in the model (such as neighbourhood information) can be accessed via a graph rotation system~\cite{edmonds_1960}. We realize the implementation of the 2D model using \textit{OpenGL} (\href{https://www.opengl.org/}{https://www.opengl.org/}) and the \textit{VV} (Vertex-Vertex) programming language~\citeMM{smith_et_al_2004}{smith_2006} which is embedded in a C{}\verb!++! programming environment.
 \newline
 
 %L-systems or also called Lindenmayer~Systems~\cite{lindenmayer_1968, prusinkiewicz_lindenmayer_1990}. The L-system is a language that consists of a set of strings based on predefined rules. More precisely, it consists of an axiom, the starting point of the system, and a set of production rules. The growth of a dynamic structure is realized by applying these rules to the axiom in which the resulting string is again in the language of the used system. Through this, the growth can be described by an infinite set of strings that 'steers' the growth behaviour. L-systems are commonly used to model plant growths as well as to generate fractals such as the Sierpinski triangle, for example.
