--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -108,7 +108,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & & & & & \ & \ \\
 & Microscopy & Microscopy & Microscopy & Microscopy & Microscopy & Microscopy\\
 \cmidrule{2-7}
-& Aquisition Data & Aquisition Data & Aquisition Data & Aquisition Data & Aquisition Data & Aquisition Data\\
+& Data Acquisition & Data Acquisition & Data Acquisition & Data Acquisition & Data Acquisition & Data Acquisition\\
 & Start Time = 30.8.2012, 16:24pm & Start Time = 4.12.2012, 1:20pm & Start Time = 11.12.2012, 14:45pm & Start Time = 8.5.2013, 12:25pm & Start Time = 3.6.2013, 15:00pm & Start Time = 3.12.2013, 12:40pm\\
 & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min\\
 & Total Recording Time = 47h & Total Recording Time = 45h & Total Recording Time = 39h 30min & Total Recording Time = 50h 30min & Total Recording Time = 65h 20min & Total Recording Time = 42h 55min\\
