--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -18,7 +18,7 @@
 \captionof{figure}[]{
 Related to Figure 1.
 {\bf Time lapse recording of lateral root primordia development in five wild type datasets.}
-{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the image acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pUBQ10::YFP-PIP1;4}is shown. Due to a high dynamic range in grey values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
+{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the image acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pUBQ10::YFP-PIP1;4}is shown. Due to a high dynamic range in gray values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
 }
 \label{fig:S1}
 %
@@ -32,7 +32,7 @@ Related to Figure 1.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 1.
-{\bf Cell lineages of the five wild type datasets.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees framed with orange rectangles are the ones located in the master cell file of a dataset. The visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal).
+{\bf Cell lineages of the five wild type datasets.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees framed with orange rectangles are the ones located in the master cell file of a dataset. The visualization at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal).
 }
 \label{fig:S2}
 %
@@ -46,7 +46,7 @@ Related to Figure 1.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 2 and Figure 3.
-{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in radial and side views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells.
+{\bf Layer visualizations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in radial and side views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is colored according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells.
 }
 \label{fig:S3}
 %
@@ -60,7 +60,7 @@ Related to Figure 2 and Figure 3.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 4.
-{\bf Reconstruction of five wild type lateral root primordia and analysis of cell file information.} {\bf A:} For each dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, radial and side views. Clonally related cells share the same colour which also indicates the cell file assignment. {\bf B:} First time point of the membrane channel in the front view. {\bf C:} Single cell initiation events are restricted to the periphery of the field of founder cells. A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are illustrated in grey. The red arrowhead indicates founders not belonging to a pair of pericycle cells. {\bf D:} Correlation between the topology of endodermis cells and most contributing founders. The white-magenta dashed lines represent the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium. {\bf E:} Pericycle cell border positions relative to the actual centre. {\bf F:} Timing of each division per cell file for all datasets. For each round of division (sub panels cycle 1$, \ldots$, cycle 6), each cell division is plotted according to its cell file assignment and its time point of division. The dashed red box indicates the master cell file.
+{\bf Reconstruction of five wild type lateral root primordia and analysis of cell file information.} {\bf A:} For each dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, radial and side views. Clonally related cells share the same color which also indicates the cell file assignment. {\bf B:} First time point of the membrane channel in the front view. {\bf C:} Single cell initiation events are restricted to the periphery of the field of founder cells. A sketch of the position of the cell boundaries. Cells in the master cell file are colored in light and dark green, respectively. The cells in the two flanking cell files are colored in yellow or orange while the other cell files are illustrated in gray. The red arrowhead indicates founders not belonging to a pair of pericycle cells. {\bf D:} Correlation between the topology of endodermis cells and most contributing founders. The white-magenta dashed lines represent the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium. {\bf E:} Pericycle cell border positions relative to the actual center. {\bf F:} Timing of each division per cell file for all datasets. For each round of division (sub panels cycle 1$, \ldots$, cycle 6), each cell division is plotted according to its cell file assignment and its time point of division. The dashed red box indicates the master cell file.
 }
 \label{fig:S4}
 %
@@ -74,7 +74,7 @@ Related to Figure 4.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 5.
-{\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions relative to the cell geometry. For each dataset, single sections along the indicated cell files (overview upper left) are shown. The sections labelled A to F show different time points. Cell divisions are grouped into two classes according to the orientation of the newly generated cell wall. Either the cell wall is build along the long axis (blue) or the short axis (yellow) of the mother cell. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
+{\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions relative to the cell geometry. For each dataset, single sections along the indicated cell files (overview upper left) are shown. The sections labeled A to F show different time points. Cell divisions are grouped into two classes according to the orientation of the newly generated cell wall. Either the cell wall is build along the long axis (blue) or the short axis (yellow) of the mother cell. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
 }
 \label{fig:S5}
 %
@@ -89,7 +89,7 @@ Related to Figure 5.
 \captionof{figure}[]{
 Related to Figure 5.
 {\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant (dataset \#131203).}
-{\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravistimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B:} Corresponding cell lineages. The colour scheme is identical to the one used in Figure~\ref{fig:S2}. {\bf C-I:} Altered cell divisions in the aurora double mutant. A single slice of the master cell file at different time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{C-E}) The cell divided without building a cell wall. (\textbf{F-H}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{I}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
+{\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravistimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B:} Corresponding cell lineages. The color scheme is identical to the one used in Figure~\ref{fig:S2}. {\bf C-I:} Altered cell divisions in the aurora double mutant. A single slice of the master cell file at different time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{C-E}) The cell divided without building a cell wall. (\textbf{F-H}) Both daughter cells divided periclinally with cell walls connected in the center creating two binucleated cells. (\textbf{I}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
 }
 \label{fig:S6}
 %
@@ -103,7 +103,7 @@ Related to Figure 5.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 6.
-{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines are drawn for at least two cells through the centres of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio, i.e. the maximal percentage increase of a cell before it divides (see Section~\ref{sec:timePointOfDivison}) as well as the average number of cells, anticlinal and periclinal divisions are listed for each model with 100 simulation runs.
+{\bf Alternative visualizations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualization are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colors indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centers of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines are drawn for at least two cells through the centers of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio, i.e. the maximal percentage increase of a cell before it divides (see Section~\ref{sec:timePointOfDivison}) as well as the average number of cells, anticlinal and periclinal divisions are listed for each model with 100 simulation runs.
 }
 \label{fig:S7}
 %
