Fixed new reviewer issues and added own bib style file

--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -8,7 +8,7 @@
 %\listoffigures
 %\clearpage
 %
-\section*{Supplemental Figures}
+%\section*{Supplemental Figures}
 \begin{figure}[!ht]
 \centering
 	\begin{overpic}[width=0.89\linewidth]{images/S1.pdf}
