--- a/SupplementalReferences.tex
+++ b/SupplementalReferences.tex
@@ -6,5 +6,5 @@
 %\addcontentsline{toc}{section}{%
 % \numberline{}Supplemental References}
 % using of own bibtex format
-\bibliographystyle{bib/Science}
+\bibliographystyle{bib/myabbrvnat}
 \bibliography{bib/lit.bib}
