--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -68,7 +68,9 @@
 %
 \setlength{\tabcolsep}{0.2em}
 \begin{sidewaystable}[!ht]
-\begin{picture}(0,0)\put(43,0){\rotatebox{0}{\parbox{\textwidth}{\section*{Supplemental Table}}}}\end{picture}
+\begin{picture}(0,0)\put(43,0){\rotatebox{0}{\parbox{\textwidth}{\section*{
+Table S1: Related to Figure 1. \textbf{Metadata of light sheet recordings.}
+}}}}\end{picture}
 	\miniscule
 \begin{longtable}{@{} l l l l l l l @{}}
 \toprule
@@ -146,7 +148,7 @@ Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift 
 & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z & Crop Dimension X $\times$ Y $\times$ Z\\
 & 555 $\times$ 221 $\times$ 147 & 689 $\times$ 393 $\times$ 200 & 736 $\times$ 376 $\times$ 170 & 682 $\times$ 406 $\times$ 130 & 666 $\times$ 404 $\times$ 130 & 684 $\times$ 378 $\times$ 110\\
 \bottomrule
-\caption[Metadata of light sheet recordings.]{Related to Figure 1. \textbf{Metadata of light sheet recordings.}}
+%\caption[Metadata of light sheet recordings.]{Related to Figure 1. \textbf{Metadata of light sheet recordings.}}
 \label{tab:metadata}
 \end{longtable}
 \end{sidewaystable}
