--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -313,6 +313,7 @@
   year = {2003},
   volume = {5},
   pages = {67--70},
+  doi = {10.1007/s10035-003-0126-x},
   owner = {necrolyte},
   timestamp = {2015.07.22}
 }
@@ -389,6 +390,7 @@
   volume = {108},
   pages = {6294--6299},
   number = {15},
+  doi = {10.1073/pnas.1011866108},
   owner = {necrolyte},
   timestamp = {2015.05.07}
 }
@@ -808,7 +810,7 @@
   volume = {20},
   pages = {1697--1706},
   number = {19},
-  month = oct
+  doi = {10.1016/j.cub.2010.09.007}
 }
 
 @INPROCEEDINGS{ding_et_al_2008,
@@ -1224,7 +1226,7 @@
   volume = {59},
   pages = {169--178},
   number = {1},
-  month = jul
+  doi = {10.1111/j.1365-313X.2009.03851.x}
 }
 
 @INPROCEEDINGS{giannotti_et_al_2007,
@@ -1285,12 +1287,13 @@
 
 @ARTICLE{graner_et_al_2008,
   author = {Graner, F. and Dollet, B. and Raufaste, C. and Marmottant, P.},
-  title = {Discrete rearranging disordered patterns, part I: Robust statistical
+  title = {Discrete rearranging disordered patterns, part {I}: Robust statistical
 	tools in two or three dimensions},
   journal = {The European Physical Journal},
   year = {2008},
   volume = {25},
   pages = {349--369},
+  doi = {10.1140/epje/i2007-10298-8},
   owner = {necrolyte},
   timestamp = {2014.01.21}
 }
@@ -1324,7 +1327,7 @@
   volume = {64},
   pages = {355--365},
   number = {2},
-  month = jul
+  doi = {10.1111/j.1365-313X.2010.04322.x}
 }
 
 @MISC{HDF5,
@@ -1527,7 +1530,8 @@
   pages = {1007--1009},
   number = {5686},
   date-added = {2011-12-09 19:28:53 +0100},
-  date-modified = {2011-12-09 19:29:29 +0100}
+  date-modified = {2011-12-09 19:29:29 +0100},
+  doi = {10.1126/science.1100035}
 }
 
 @ARTICLE{hurter_et_al_2009,
@@ -1700,7 +1704,8 @@
   year = {2008},
   volume = {322},
   pages = {1065--1069},
-  number = {5904}
+  number = {5904},
+  doi = {10.1126/science.1162493}
 }
 
 @ARTICLE{keller_and_stelzer_2008,
@@ -2019,7 +2024,8 @@
   title = {Visualization Software for 3D Video Microscopy: A Design study},
   booktitle = {Proceedings of the Eurographics Conference on Visualization (EuroVis
 	Short Papers)},
-  year = {2012}
+  year = {2012},
+  doi = {10.2312/PE/EuroVisShort/EuroVisShort2012/073-077}
 }
 
 @ARTICLE{levenshtein_1966,
@@ -2155,19 +2161,19 @@
 
 @ARTICLE{Lucas11032013,
   author = {Lucas, Mika{\"e}l and Kenobi, Kim and von Wangenheim, Daniel and
-	VO$\beta$, Ute and Swarup, Kamal and De Smet, Ive and Van Damme,
+	Vo$\beta$, Ute and Swarup, Kamal and De Smet, Ive and Van Damme,
 	Dani{\"e}l and Lawrence, Tara and P{\'e}ret, Benjamin and Moscardi,
 	Eric and Barbeau, Daniel and Godin, Christophe and Salt, David and
 	Guyomarc'h, Soazig and Stelzer, Ernst H K and Maizel, Alexis and
 	Laplaze, Laurent and Bennett, Malcolm J},
-  title = {{Lateral root morphogenesis is dependent on the mechanical properties
-	of the overlaying tissues.}},
-  journal = {Proc Natl Acad Sci U S A},
+  title = {Lateral root morphogenesis is dependent on the mechanical properties
+	of the overlaying tissues.},
+  journal = {Proc Natl Acad Sci USA},
   year = {2013},
   volume = {110},
   pages = {5229--5234},
   number = {13},
-  month = mar
+  doi = {10.1073/pnas.1210807110}
 }
 
 @BOOK{LOD3D,
@@ -2224,7 +2230,7 @@
   volume = {68},
   pages = {377--385},
   number = {2},
-  owner = {necrolyte},
+  doi = {10.1111/j.1365-313X.2011.04692.x},
   timestamp = {2013.12.15}
 }
 
@@ -2609,6 +2615,7 @@
   volume = {193},
   pages = {549--569},
   number = {3},
+  doi = {10.1111/j.1469-8137.2011.04009.x},
   owner = {jens},
   timestamp = {2015.04.06}
 }
@@ -2992,6 +2999,7 @@
   year = {2004},
   volume = {3062},
   pages = {313--327},
+  doi = {10.1007/978-3-540-25959-6_23},
   owner = {necrolyte},
   timestamp = {2015.04.05}
 }
@@ -3004,7 +3012,7 @@
   volume = {32},
   pages = {1258--1271},
   number = {9},
-  owner = {necrolyte},
+  doi = {10.1111/j.1365-3040.2009.01997.x},
   timestamp = {2015.09.02}
 }
 
@@ -3222,7 +3230,7 @@
   volume = {343},
   pages = {178--183},
   number = {6167},
-  month = jan
+  doi = {10.1126/science.1245871}
 }
 
 @ARTICLE{Vesanto_1999,
