Fixed minor things in the bib and added SINGLE file of datasets

--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -385,7 +385,7 @@
 @ARTICLE{besson_and_dumais_2011,
   author = {Besson, Sébastien and Dumais, Jacques},
   title = {Universal rule for the symmetric division of plant cells},
-  journal = {Proceedings of the National Academy of Sciences},
+  journal = {Proceedings of the National Academy of Sciences USA},
   year = {2011},
   volume = {108},
   pages = {6294--6299},
@@ -2168,7 +2168,7 @@
 	Laplaze, Laurent and Bennett, Malcolm J},
   title = {Lateral root morphogenesis is dependent on the mechanical properties
 	of the overlaying tissues.},
-  journal = {Proc Natl Acad Sci USA},
+  journal = {Proceedings of the National Academy of Sciences USA},
   year = {2013},
   volume = {110},
   pages = {5229--5234},
