--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -309,7 +309,7 @@
 @ARTICLE{aubouy_et_al_2003,
   author = {Aubouy, Miguel and Jiang, Yi and Glazier, James A. and Graner, François},
   title = {A texture tensor to quantify deformations},
-  journal = {Granular Matter},
+  journal = {Granul Matter},
   year = {2003},
   volume = {5},
   pages = {67--70},
@@ -385,7 +385,7 @@
 @ARTICLE{besson_and_dumais_2011,
   author = {Besson, Sébastien and Dumais, Jacques},
   title = {Universal rule for the symmetric division of plant cells},
-  journal = {Proceedings of the National Academy of Sciences USA},
+  journal = {Proc Natl Acad Sci USA},
   year = {2011},
   volume = {108},
   pages = {6294--6299},
@@ -805,7 +805,7 @@
 	Dolf and Bennett, Malcolm J and Beeckman, Tom},
   title = {{A novel aux/IAA28 signaling cascade activates GATA23-dependent specification
 	of lateral root founder cell identity.}},
-  journal = {Current Biology},
+  journal = {Curr Biol},
   year = {2010},
   volume = {20},
   pages = {1697--1706},
@@ -1004,7 +1004,7 @@
 @ARTICLE{errera_1886,
   author = {L. Errera},
   title = {On a fundamental condition of equilibrium for living cells},
-  journal = {Comptes rendus hebdomadaires des séances de l'Académie des Sciences},
+  journal = {C R Hebd Seances Acad Sci},
   year = {1886},
   volume = {103},
   pages = {822--824},
@@ -1221,7 +1221,7 @@
 	L and Mayer, Ulrike and Stierhof, York-Dieter and Chory, Joanne},
   title = {{Rapid, combinatorial analysis of membrane compartments in intact
 	plants with a multicolor marker set.}},
-  journal = {The Plant Journal},
+  journal = {Plant J},
   year = {2009},
   volume = {59},
   pages = {169--178},
@@ -1289,7 +1289,7 @@
   author = {Graner, F. and Dollet, B. and Raufaste, C. and Marmottant, P.},
   title = {Discrete rearranging disordered patterns, part {I}: Robust statistical
 	tools in two or three dimensions},
-  journal = {The European Physical Journal},
+  journal = {Eur Phys J},
   year = {2008},
   volume = {25},
   pages = {349--369},
@@ -1322,7 +1322,7 @@
   title = {{A Ubiquitin-10 promoter-based vector set for fluorescent protein
 	tagging facilitates temporal stability and native protein distribution
 	in transient and stable expression studies.}},
-  journal = {The Plant Journal},
+  journal = {Plant J},
   year = {2010},
   volume = {64},
   pages = {355--365},
@@ -2021,9 +2021,8 @@
 @INPROCEEDINGS{leitte_et_al_2012,
   author = {Heike Leitte and Jens Fangerau and Xinghua Lou and Burkhard H\"ockendorf
 	and Steffen Lemke and Alexis Maizel and Jochen Wittbrodt},
-  title = {Visualization Software for 3D Video Microscopy: A Design study},
-  booktitle = {Proceedings of the Eurographics Conference on Visualization (EuroVis
-	Short Papers)},
+  title = {Visualization Software for {3D} Video Microscopy: {A} Design study},
+  booktitle = {Proc Euro Conf Vis (EuroVis Short Papers)},
   year = {2012},
   doi = {10.2312/PE/EuroVisShort/EuroVisShort2012/073-077}
 }
@@ -2168,7 +2167,7 @@
 	Laplaze, Laurent and Bennett, Malcolm J},
   title = {Lateral root morphogenesis is dependent on the mechanical properties
 	of the overlaying tissues.},
-  journal = {Proceedings of the National Academy of Sciences USA},
+  journal = {Proc Natl Acad Sci USA},
   year = {2013},
   volume = {110},
   pages = {5229--5234},
@@ -2225,7 +2224,7 @@
 	and Haseloff, Jim and Stelzer, Ernst H.K.},
   title = {High-resolution live imaging of plant growth in near physiological
 	bright conditions using light sheet fluorescence microscopy},
-  journal = {The Plant Journal},
+  journal = {Plant J},
   year = {2011},
   volume = {68},
   pages = {377--385},
@@ -2610,7 +2609,7 @@
 @ARTICLE{prusinkiewicz_runions_2012,
   author = {Prusinkiewicz, Przemyslaw and Runions, Adam},
   title = {Computational models of plant development and form},
-  journal = {New Phytologist},
+  journal = {New Phytol},
   year = {2012},
   volume = {193},
   pages = {549--569},
@@ -3007,7 +3006,7 @@
 @ARTICLE{smith_bayer_2004,
   author = {Smith, Richard S. and Bayer, Emmanuelle M.},
   title = {Auxin transport-feedback models of patterning in plants},
-  journal = {Plant, Cell \& Environment},
+  journal = {Plant Cell Environ},
   year = {2009},
   volume = {32},
   pages = {1258--1271},
@@ -3225,7 +3224,7 @@
 	Niko},
   title = {{A spatial accommodation by neighboring cells is required for organ
 	initiation in Arabidopsis.}},
-  journal = {Science (New York, N.Y.)},
+  journal = {Science},
   year = {2014},
   volume = {343},
   pages = {178--183},
